force-app/main/default/objects/SLA_Setting__c/SLA_Setting__c.object-meta.xml
<CustomObject>
    <label>SLA Setting</label>
    <nameField>
        <displayFormat>SLA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>