force-app/main/default/objects/SLA_Setting__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Entity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>(NB/UW) Information Status</fullName>
            </value>
            <value>
                <fullName>Account Balance</fullName>
            </value>
            <value>
                <fullName>Admin Charges</fullName>
            </value>
            <value>
                <fullName>Agent License/New Recruit/ agent replacement</fullName>
            </value>
            <value>
                <fullName>AMFS Customer</fullName>
            </value>
            <value>
                <fullName>Blast SMS _SMS Claim Related</fullName>
            </value>
            <value>
                <fullName>Blast SMS _SMS Collection Related</fullName>
            </value>
            <value>
                <fullName>Blast SMS _SMS Collection Related Failed Debit</fullName>
            </value>
            <value>
                <fullName>Blast SMS _SMS Collection Related Reminder Debit</fullName>
            </value>
            <value>
                <fullName>Blast SMS _SMS DMU Related</fullName>
            </value>
            <value>
                <fullName>Blast SMS _SMS Mobile Service</fullName>
            </value>
            <value>
                <fullName>Blast SMS _SMS NB/UW Related</fullName>
            </value>
            <value>
                <fullName>Blast SMS _SMS POS Related MAPAN Lapse</fullName>
            </value>
            <value>
                <fullName>Blast SMS _SMS POS Related Pending or Incomplete process</fullName>
            </value>
            <value>
                <fullName>Blast SMS _SMS Promo (Produk dan Program)</fullName>
            </value>
            <value>
                <fullName>Bukti transfer</fullName>
            </value>
            <value>
                <fullName>capture premi</fullName>
            </value>
            <value>
                <fullName>change/add autodebet</fullName>
            </value>
            <value>
                <fullName>Claim - Claim AFI-process claim-update pending-special case-feedback</fullName>
            </value>
            <value>
                <fullName>Claim - claim group</fullName>
            </value>
            <value>
                <fullName>Claim Information Status</fullName>
            </value>
            <value>
                <fullName>Claim Procedure</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Claim Status</fullName>
            </value>
            <value>
                <fullName>Collection related</fullName>
            </value>
            <value>
                <fullName>Complaint_Administrator Procedures</fullName>
            </value>
            <value>
                <fullName>Complaint_Admin Prosedure</fullName>
            </value>
            <value>
                <fullName>Complaint_Claim</fullName>
            </value>
            <value>
                <fullName>Complaint_Courier Delivery</fullName>
            </value>
            <value>
                <fullName>Complaint_Financial Advisor Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>