force-app/main/default/objects/SLA_Setting__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Nature__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Others - Others</fullName>
            </value>
            <value>
                <fullName>Courier Delivery - Delivery</fullName>
            </value>
            <value>
                <fullName>Courier Delivery - Inquiry Delivery</fullName>
            </value>
            <value>
                <fullName>Courier Delivery - Inquiry Receipt</fullName>
            </value>
            <value>
                <fullName>Claim Decision</fullName>
            </value>
            <value>
                <fullName>Claim Delay</fullName>
            </value>
            <value>
                <fullName>Financial Advisor Service</fullName>
            </value>
            <value>
                <fullName>Forgery</fullName>
            </value>
            <value>
                <fullName>Misappropriation</fullName>
            </value>
            <value>
                <fullName>Misrepresentation - Incomplete Information</fullName>
            </value>
            <value>
                <fullName>Misrepresentation - Lack of Professional Knowledge</fullName>
            </value>
            <value>
                <fullName>Misrepresentation - Misrepresentation</fullName>
            </value>
            <value>
                <fullName>Misrepresentation - Premium Holiday</fullName>
            </value>
            <value>
                <fullName>Misrepresentation - TM</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Non Disclosure</fullName>
            </value>
            <value>
                <fullName>Facility Service</fullName>
            </value>
            <value>
                <fullName>Collector</fullName>
            </value>
            <value>
                <fullName>Courtesy</fullName>
            </value>
            <value>
                <fullName>Employee Training</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Hardware Problem - IT</fullName>
            </value>
            <value>
                <fullName>Information - Marketing</fullName>
            </value>
            <value>
                <fullName>Merchandise</fullName>
            </value>
            <value>
                <fullName>No Follow Up</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service - Activity Support</fullName>
            </value>
            <value>
                <fullName>Service Facility</fullName>
            </value>
            <value>
                <fullName>Skill/Product Knowledge</fullName>
            </value>
            <value>
                <fullName>Soft ware Problem - IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>