force-app/main/default/objects/SLA_Setting__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Entity__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complex Case</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Potensial Complaint (MAGI)</fullName>
            </value>
            <value>
                <fullName>Potential Complaint</fullName>
            </value>
            <value>
                <fullName>Soft Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>