force-app/main/default/objects/SLA_Setting__c/fields/End_Working_Hour__c.field-meta.xml
<CustomField>
    <fullName>End_Working_Hour__c</fullName>
    <defaultValue>16</defaultValue>
    <label>End Working Hour</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>