force-app/main/default/objects/SLA_Setting__c/fields/Is_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Is_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Calendar?</label>
    <type>Checkbox</type>
</CustomField>