force-app/main/default/objects/SLA_Setting__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator Procedures</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Claim Decision</fullName>
            </value>
            <value>
                <fullName>Comben</fullName>
            </value>
            <value>
                <fullName>Courier Delivery</fullName>
            </value>
            <value>
                <fullName>Courier Investigation</fullName>
            </value>
            <value>
                <fullName>Financial Advisor Service</fullName>
            </value>
            <value>
                <fullName>Forgery</fullName>
            </value>
            <value>
                <fullName>Misappropiation</fullName>
            </value>
            <value>
                <fullName>Misrepresentation</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Non Disclosure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Policy Duplicate</fullName>
            </value>
            <value>
                <fullName>Policy Retur</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>TM Service</fullName>
            </value>
            <value>
                <fullName>Twisting/Chunning</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Without Consent</fullName>
            </value>
            <value>
                <fullName>Processing Error</fullName>
            </value>
            <value>
                <fullName>Agent Services</fullName>
            </value>
            <value>
                <fullName>Human Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>