force-app/main/default/objects/SLA_Setting__c/fields/Service_SLA__c.field-meta.xml
<CustomField>
    <fullName>Service_SLA__c</fullName>
    <label>Service SLA</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>