force-app/main/default/objects/SLA_Setting__c/fields/Start_Working_Hour__c.field-meta.xml
<CustomField>
    <fullName>Start_Working_Hour__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Start Working Hour</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>