force-app/main/default/objects/SLA_Setting__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>