force-app/main/default/objects/SLA_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Nature__c</columns>
    <columns>Category__c</columns>
    <columns>Complaint_Type__c</columns>
    <columns>Service_SLA__c</columns>
    <columns>Unit__c</columns>
    <columns>Start_Working_Hour__c</columns>
    <columns>End_Working_Hour__c</columns>
    <columns>Is_Calendar__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>